separate media querys to prevent small bug on mobile device

--- a/style/education.css
+++ b/style/education.css
@@ -1,4 +1,5 @@
 @import 'style.css';
+
 /* -------------------------------------------------------------- */
 /* ABOUT ME */
 /* -------------------------------------------------------------- */
@@ -171,4 +172,121 @@
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
     color:var(--main-white);
+}
+
+/*MEDIA QUERY*/
+
+/*   Mobile   */
+
+@media screen and (max-width: 320px) {
+    .ct-main{
+        padding: 0% 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    .ct-main h1{
+        margin-top: 3rem;
+        line-height: 5rem;
+        width: 100%;
+        margin-bottom: 0rem;
+    }
+    .ct-main-menu{
+        justify-content: center;
+    }
+    .ct-txt-container{
+        width:100%;
+        height: 70%;
+        display: flex;
+        align-items: center;        
+    }
+    .ct-line-wrapper{
+        align-items: center;
+        padding:10% 0;
+    }
+    .ct-txt{
+        justify-content: space-around;
+        height: 100%;
+    }
+    .uni-align{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    .uni-align h4{
+        width: 100%;
+    }
+    .uni-align .small-sub {
+        line-height: 1.5rem
+    }
+    .small-sub{
+        letter-spacing: 1px;
+        font-size: 1.1rem;
+        margin:  0 0 0.5rem 0;
+    }
+    .ct-p{
+        font-size: 1.4rem;
+    }
+    .orange{
+        display: none;
+    }
+    .certificate-container img{
+        width: 90%;
+    }
+    .ct-info-wrapper a{
+        color: var(--main-second);
+        font-weight: 700;
+        letter-spacing: 4px;
+    }
+}
+
+@media screen and (min-width:321px) and (max-width: 480px){
+    .ct-main{
+        padding:0% 5% 10% 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    .ct-main h1{
+        padding-top:5rem;
+        line-height: 3rem;
+    }
+    .ct-main-menu{
+        margin: 10% 0 0 0 ;
+        justify-content: center;
+    }
+    .ct-txt-container{
+        width:100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+    }
+    .ct-line-wrapper{
+        align-items: center;
+        
+        padding: 15% 0;
+    }
+    .ct-txt{
+        justify-content: space-between;
+        padding:0px !important;
+        height: 80%;
+    }
+    
+    .uni-align{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    .uni-align h4{
+        width: 100%;
+    }
+    .uni-align .small-sub {
+        line-height: var(--main-lh-subtitle-small);
+    }
+    .orange{
+        display: none;
+    }
+    .certificate-container img{
+        width: 90%;
+    }
 }
