--- a/style/landing.css
+++ b/style/landing.css
@@ -46,6 +46,8 @@
     margin-top:60px;
     opacity: 0;
 }
+
+/*LATERAL SECTION INDICATOR*/
 .section-indicator{
     display:flex;
     flex-direction: column;
@@ -71,6 +73,7 @@
 .square-active{
     rotate: 45deg;
 }
+
 .hero{
     height: 90vh;
     width: 100vw;
@@ -290,4 +293,88 @@
     width: 1px;
     height: 100%;
     background: var(--main-white);
+}
+
+/*MEDIA QUERY*/
+
+/*   Mobile   */
+
+@media screen and (max-width: 320px) {
+    .main{
+        padding: 4% 8% 10% 8%;
+    }
+    .section-indicator{
+    flex-direction: row;
+    gap: 15px;
+    height: 5vh;
+    width: 100vw;
+    bottom: 0;
+    z-index:99;
+    }
+    
+    .title{
+        font-size: 6rem;
+        letter-spacing: 0;
+    }
+   
+    .p-fade{
+        padding:2% 0 0 0;
+        font-size: 1.4rem;
+    }
+    .ctn-button-wrapper{
+    height: 20%;
+    width: 100%;
+    }
+    .contact-above{
+        height: 5%;
+        width: 100%;
+    }
+    .line-container{
+        display: none;
+    }
+}
+
+@media screen and (min-width:321px) and (max-width: 480px){
+    .main{
+        padding: 8%;
+        align-items: center;
+    }
+    .section-indicator{
+    flex-direction: row;
+    height: 5vh;
+    width: 100vw;
+    bottom: 0;
+    z-index:99;
+    }
+    .title{
+        letter-spacing: 2px;
+    }
+    .main-hello{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .greeting-p{
+        margin-top: 2rem;
+    }
+    .ctn-button-wrapper{
+        height: 20%;
+        width: 100%;
+        }
+    .contact-above{
+        height: 5%;
+        width: 100%;
+    }
+    .contact-under{
+        height: 5%;
+        width: 100%;
+    }
+    .cnt-under-txt{
+        width: 65%;
+    }
+    .line-container{
+        display: none;
+    }
 }
