--- a/style/style.css
+++ b/style/style.css
@@ -39,8 +39,8 @@ body::-webkit-scrollbar {
     display: none;  /* Safari and Chrome */
 }
 
-
 /*ANIMATION*/
+
 @keyframes fade{
     0%{opacity: 0;
         transform: translateY(-50px);
@@ -141,199 +141,3 @@ body::-webkit-scrollbar {
     }
 }
 
-/*MEDIA QUERY*/
-
-/*   MOBILE    */
-
-@media screen and (max-width: 480px){
-    .main{
-        padding: 8%;
-        align-items: center;
-    }
-    .section-indicator{
-    flex-direction: row;
-    height: 5vh;
-    width: 100vw;
-    bottom: 0;
-    z-index:99;
-    }
-    .title{
-        letter-spacing: 2px;
-    }
-    .main-hello{
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-    .greeting-p{
-        margin-top: 2rem;
-    }
-    .ctn-button-wrapper{
-        height: 20%;
-        width: 100%;
-        }
-    .contact-above{
-        height: 5%;
-        width: 100%;
-    }
-    .contact-under{
-        height: 5%;
-        width: 100%;
-    }
-    .cnt-under-txt{
-        width: 65%;
-    }
-    .line-container{
-        display: none;
-    }
-    /*ABOUT ME SECTION*/
-    .ct-main{
-        padding:0% 5% 10% 5%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-    }
-    .ct-main h1{
-        padding-top:5rem;
-        line-height: 3rem;
-    }
-    .ct-main-menu{
-        margin: 10% 0 0 0 ;
-        justify-content: center;
-    }
-    .ct-txt-container{
-        width:100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-    }
-    .ct-line-wrapper{
-        align-items: center;
-        
-        padding: 15% 0;
-    }
-    .ct-txt{
-        justify-content: space-between;
-        padding:0px !important;
-        height: 80%;
-    }
-    
-    .uni-align{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-    .uni-align h4{
-        width: 100%;
-    }
-    .uni-align .small-sub {
-        line-height: var(--main-lh-subtitle-small);
-    }
-    .orange{
-        display: none;
-    }
-    .certificate-container img{
-        width: 90%;
-    }
-}
-@media screen and (max-width: 320px) {
-    .main{
-        padding: 4% 8% 10% 8%;
-    }
-    .main-hello{
-        /**/
-    }
-    .section-indicator{
-    flex-direction: row;
-    gap: 15px;
-    height: 5vh;
-    width: 100vw;
-    bottom: 0;
-    z-index:99;
-    }
-    
-    .title{
-        font-size: 6rem;
-        letter-spacing: 0;
-    }
-   
-    .p-fade{
-        padding:2% 0 0 0;
-        font-size: 1.4rem;
-        
-    }
-    .ctn-button-wrapper{
-    height: 20%;
-    width: 100%;
-    }
-    .contact-above{
-        height: 5%;
-        width: 100%;
-    }
-    .line-container{
-        display: none;
-    }
-    /*ABOUT ME SECTION*/
-
-    .ct-main h1{
-        padding-top:5rem;
-        line-height: 3rem;
-    }
-    .ct-main{
-        padding:0% 5% 15% 5%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-    }
-    .ct-main-menu{
-        justify-content: center;
-        margin: 4% 0 0% 0;
-    }
-    .ct-txt-container{
-        width:100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        
-    }
-    .ct-line-wrapper{
-        align-items: center;
-        padding:5% 0;
-    }
-    .ct-txt{
-        justify-content: space-around;
-        height: 100%;
-    }
-    .uni-align{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-    .uni-align h4{
-        width: 100%;
-    }
-    .uni-align .small-sub {
-        line-height: 1.5rem
-    }
-    .small-sub{
-        letter-spacing: 1px;
-        font-size: 1.1rem;
-        margin:  0 0 0.5rem 0;
-    }
-    .ct-p{
-        font-size: 1.4rem;
-    }
-    .orange{
-        display: none;
-    }
-    .certificate-container img{
-        width: 90%;
-    }
-    .ct-info-wrapper a{
-        color: var(--main-second);
-        font-weight: 700;
-        letter-spacing: 4px;
-    }
-}
